<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen1SignUp">

    <TextView
        android:id="@+id/your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/your_email"
        app:layout_constraintTop_toBottomOf="@id/your_email"
        app:layout_constraintEnd_toEndOf="@id/your_email"
        />

    <TextView
        android:id="@+id/your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_password"
        app:layout_constraintStart_toStartOf="@id/your_email"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/your_email"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Не менее 8 символов, "
        android:inputType="textVisiblePassword"
        app:layout_constraintEnd_toEndOf="@id/your_email"
        app:layout_constraintStart_toStartOf="@id/your_email"
        app:layout_constraintTop_toBottomOf="@id/your_password" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/your_email"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/your_email"
        />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/your_email"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        app:layout_constraintEnd_toEndOf="@id/your_email"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


